@@ -1,16 +1,27 @@
 {
-  "timestamp" : "2022-12-07T08:19:39Z",
+  "timestamp" : "2022-12-12T00:48:09Z",
   "count_outdated" : 5,
   "uniques_outdated" : 5,
-  "count" : 7,
-  "uniques" : 6,
+  "count" : 9,
+  "uniques" : 8,
   "clones" : [
     {
       "timestamp": "2022-12-07T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-12-11T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
