@@ -1,11 +1,16 @@
 {
-  "count": 2,
-  "uniques": 1,
+  "count": 4,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-12-07T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-11T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
